# Naval-War

./: CMakeLists.txt  README.md  common.h  main.cpp
actiune/: actiune.cpp  actiune.h
nava/: nava.cpp  nava.h
tipNave/: crucisator.cpp  crucisator.h  crucisator_aparare.cpp  crucisator_aparare.h  distrugator.cpp  distrugator.h  salupa.cpp  salupa.h  submarin.cpp  submarin.h
